# infectio-photorealism

./: .gitignore  README.md  config.py  dataset.py  model.py  predict.py  pyproject.toml  requirements.txt  slurm_job.sh  train.py  utils.py
configs/: config_baseline.py  config_debug.py
data/: plaque_data.py  sat2map_data.py
model/: model.py
